--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,7 @@
 compile.on.save=true
+do.depend=false
+do.jar=true
+javac.debug=true
+javadoc.preview=true
 user.properties.file=/home/alejandrocq/.netbeans/8.0.2/build.properties
+work.dir=/home/alejandrocq/Dropbox/GitHub/Comecocos
