JRE module graphics ported to Canvas.

--- a/jre/pom.xml
+++ b/jre/pom.xml
@@ -11,7 +11,7 @@
     <artifactId>pacman-jre</artifactId>
 
     <properties>
-        <app.mainClass>pacman.jre.GameFrame</app.mainClass>
+        <app.mainClass>pacman.jre.Game</app.mainClass>
     </properties>
 
     <dependencies>
