--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,17 @@ jdk:
 
 notifications:
   email: false
+  webhooks:
+    urls:
+      - https://webhooks.gitter.im/e/1fe81fd08dfc36899d78
+    on_success: change
+    on_failure: always
+    on_start: never
 
-sudo: false
+sudo: required
+
+dist: trusty
+
 cache:
   directories:
     - $HOME/.m2
